--- a/style.css
+++ b/style.css
@@ -47,7 +47,6 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
     padding: 2rem;
 }
 .main.is-active {
@@ -74,7 +73,7 @@ form {
     flex-direction: column;
     width: 100%;
     max-width: 380px;
-    margin: 1rem;
+    margin-top: .7rem;
 }
 .input {
     background-color: #1b163f;
@@ -132,7 +131,7 @@ form {
     border: none;
     border-radius: .6rem;
     padding: .8rem 1.5rem;
-    margin: 1rem;
+    margin-top: 1rem;
     cursor: pointer;
     width: 100%;
     max-width: 380px;
